# Audio-Video-Player

./: .gitignore  CMakeLists.txt  README.md  main.cc
.github/workflows/: ci.yml
docs/: 01_Architecture_Overview.md
docs/01_Architecture_Overview/: 01_Architecture_Overview.md
src/: CMakeLists.txt  audio_player.cc  audio_player.h  audio_renderer.cc  audio_renderer.h  av_reader.cc  av_reader.h  decoder.cc  decoder.h  demuxer.cc  demuxer.h  gl_renderer.cc  gl_renderer.h  mediadefs.h  packet_producer.cc  packet_producer.h  player.cc  player.h
src/utils/: logger.cc  logger.h  safe_queue.h
tests/: CMakeLists.txt  audio_player_test.cc  av_reader_test.cc  decoder_test.cc  demuxer_test.cc  gl_renderer_test.cc  player_test.cc
